2010-10-22  Ingo Feinerer  <feinerer@logic.at>

	* R/matrix.R (.TermDocumentMatrix): Make Weighting an attribute
	(instead of a list element).

2010-10-16  Ingo Feinerer  <feinerer@logic.at>

	* R/corpus.R (`[[.VCorpus`, `[[.PCorpus'): Access individual
	documents by names (fallback to IDs if names are not set).

2010-08-25  Ingo Feinerer  <feinerer@logic.at>

	* R/corpus.R (c.Corpus): When concatenating corpora, the argument
	\code{recursive} now determines whether existing corpus meta data
	is used.

2010-08-06  Ingo Feinerer  <feinerer@logic.at>

	* R/transform.R: Removed convert_UTF_8(). Use enc2utf8() instead.

2010-06-17  Ingo Feinerer  <feinerer@logic.at>

	* R/matrix.R (TermDocumentMatrix): If a dictionary is given do not
	remove terms not occurring in the corpus anymore.

2010-06-02  Ingo Feinerer  <feinerer@logic.at>

	* R/plot.R (Zipf_plot, Heaps_plot): Plotting functions for Zipf's
	and Heaps' law.

2010-05-18  Ingo Feinerer  <feinerer@logic.at>

	* R/corpus.R (Corpus, PCorpus): Use element names as IDs if
	provided by a source.

2010-04-09  Ingo Feinerer  <feinerer@logic.at>

	* R/source.R (.Source): Provide document names.

2010-04-07  Ingo Feinerer  <feinerer@logic.at>

	* R/meta.R (`content_or_meta`): Utility function.

2010-03-19  Ingo Feinerer  <feinerer@logic.at>

	* R/reader.R (readReut21578XML, readReut21578XMLasPlain): Extract
	TOPICS, LEWISSPLIT, CGISPLIT, and OLDID meta tags.

2010-03-03  Ingo Feinerer  <feinerer@logic.at>

	* R/weight.R (weightTfIdf): Added normalization option.

	* man/tm_tag_score.Rd: Add General Inquirer example for sentiment
	analysis.

2010-02-25  Ingo Feinerer  <feinerer@logic.at>

	* R/score.R (tm_tag_score): Compute a score from the number of
	tags matching in a document.

2010-02-18  Ingo Feinerer  <feinerer@logic.at>

	* R/complete.R (stemCompletion): New completion heuristics.

2010-02-17  Ingo Feinerer  <feinerer@logic.at>

	* R/plot.R (plot.TermDocumentMatrix): Memory improvements.
